minor bug fixes, configured spring-doc

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -51,6 +51,12 @@ spring:
     ansi:
       enabled: ALWAYS
 
+# Configure port
 server:
   port:
     8085
+
+# Spring doc path
+springdoc:
+  api-docs:
+    path: /docs
