--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.ecobank</groupId>
     <artifactId>idea</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>idea</name>
     <description>Demo project for Spring Boot</description>
     <url/>
