--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
     </dependencies>
 
     <build>
+        <finalName>idea-portal-backend</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
