--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,23 +2,11 @@ spring:
   application:
     name: idea
 
-    # Email
-    mail:
-      host: smtp.gmail.com
-      port: 587
-      username: your-email@gmail.com
-      password: your-email-password
-      properties:
-        mail:
-          smtp:
-            auth: true
-            starttls:
-              enable: true
-              required: true
-            connectiontimeout: 5000
-            timeout: 5000
-            writetimeout: 5000
-
+  ldap:
+    embedded:
+      ldif: classpath:test-server.ldif
+      base-dn: dc=springframework,dc=org
+      port: 8389
 
   #  Configure default username and password
   security:
@@ -38,7 +26,8 @@ spring:
     # Automatically create tables from entities
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: create
+#      ddl-auto: create-drop
+      ddl-auto: update
     # Show sql queries made by spring data jpa
     show-sql: false
     properties:
@@ -54,6 +43,24 @@ spring:
     ansi:
       enabled: ALWAYS
 
+  # Mail configuration
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: olaskeet@gmail.com
+    password: flywrsikjtoahtrn
+    properties:
+      mail:
+        transport:
+          protocol: smtp
+        smtp:
+          auth: false
+          starttls:
+            enable: true
+            required: true
+          ssl:
+            trust: smtp.gmail.com
+
 # Configure port
 server:
   port:
@@ -62,19 +69,25 @@ server:
 app:
   application-name: idea-portal
   application-email: eonyejeme@ecobank.com
-  google-client-id: 12854540090-72a2hh48sqamrsuel4l3f87kuppg0c8h.apps.googleusercontent.com
-  google-client-secret: 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
+  admin-username: oomoriwo@ecobank.com
   base-url: http://localhost
   allowed-origins: http://localhost
-  login-page-url: ${app:base-url}/login
-  login-success-url: ${app.base-url}/login/success
-  login-failure-url: ${app.base-url}/login/error
+  ldap-url: ldap://localhost:8389/dc=springframework,dc=org
+  ldap:
+    port: 8389
   database:
     name: ideaPortal
     username: root
     password: root
     host: localhost
     port: 3306
+
+# Logging configuration
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
 
 # Spring doc path
 springdoc:
