--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,11 @@
         <tag/>
         <url/>
     </scm>
+
     <properties>
         <java.version>21</java.version>
     </properties>
+
     <dependencies>
         <!-- Spring data JPA -->
         <dependency>
@@ -123,18 +125,26 @@
         </dependency>
 
         <!-- Spring LDAP Implementation -->
-        <dependency>
-            <groupId>org.springframework.ldap</groupId>
-            <artifactId>spring-ldap-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-ldap</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.unboundid</groupId>
-            <artifactId>unboundid-ldapsdk</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.ldap</groupId>-->
+<!--            <artifactId>spring-ldap-core</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.security</groupId>-->
+<!--            <artifactId>spring-security-ldap</artifactId>-->
+<!--        </dependency>-->
+
+       <!-- LDAP embedded server -->
+<!--        <dependency>-->
+<!--            <groupId>com.unboundid</groupId>-->
+<!--            <artifactId>unboundid-ldapsdk</artifactId>-->
+<!--        </dependency>-->
+
+        <!-- Web socket -->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-websocket</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.bitbucket.b_c</groupId>
